{
    "name": "NewInputSystem",
    "maps": [
        {
            "name": "MoveUpCamera",
            "id": "06aa47aa-aabe-4e5e-a252-44a4f841c03f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9969acb5-2b94-478e-b20e-7c6725789997",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "15b18c03-c67e-4da0-b63c-77d1ab979fb9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "936c4f9c-5c55-4c5f-83e6-1098167bf539",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3e4e9d1d-d642-40de-94f9-2bc52d87ca52",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cc28ef15-df2c-4593-b957-0ad60c9c0119",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6a2f68dc-8d8f-4ead-aa54-68535d1715eb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Pause",
            "id": "d8387240-e50d-4ef9-9de4-cc4f83286493",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "b68cad20-0b7d-4597-8775-46db2f89265e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "36ebc501-26fc-4fac-9920-553b5a151a81",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Jump",
            "id": "2fa1cf12-0bfc-4bba-8155-c33049560cf3",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "83652de2-8241-4fa5-9015-f0198323bbd1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "42e4feaa-c3f9-499c-8084-89e196f7e5fb",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MoveSide",
            "id": "42d65513-6ff0-4d6d-a97a-006453d6c6bb",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "3dd4b12f-05ae-41c4-8e06-f1e5c92cc15c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "fa051842-dd64-4c0c-a697-86026b8e69e3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "195e33be-cecf-4e8a-9dcb-d1e5f5bdaee6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2eba8615-33b6-47b7-a34e-4dba1411b837",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "ChangeCamera",
            "id": "2fcb8990-ad67-45bc-a36e-7374d28d023e",
            "actions": [
                {
                    "name": "LeftCameras",
                    "type": "Button",
                    "id": "723a75f6-7fff-439b-96e1-757a186cba39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightCameras",
                    "type": "Button",
                    "id": "90e47c00-95e6-4b1b-9736-93aeac34b962",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7b5938c3-0fba-4996-aa85-cfaa3685f252",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftCameras",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef1af4e0-a02b-44f0-966b-21cec7856f53",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightCameras",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}